# solis

./: Cargo.toml  e.txt  example.hl
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  commands.rs  main.rs  utils.rs
crates/core/: Cargo.toml
crates/core/src/: callable.rs  environment.rs  errors.rs  lib.rs  stmts.rs  typings.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: functions.rs  lib.rs
crates/lexer/: Cargo.toml  expanded.rs
crates/lexer/src/: lib.rs  macros.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
