[package]
name = "cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core/" }
lexer = { path = "../lexer/" }
parser = { path = "../parser/" }
interpreter = { path = "../interpreter/" }

log = "0.4.18"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
colored = "2.0.0"
